--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'application'
     id 'java'
+    id 'org.openjfx.javafxplugin' version '0.0.10'
 }
 
 group 'org.example'
@@ -8,6 +9,10 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    javafx {
+        version = "17"
+        modules = [ 'javafx.controls' ]
+    }
 }
 
 dependencies {
@@ -25,8 +30,4 @@ java {
 }
 test {
     useJUnitPlatform()
-}
-
-run {
-    args "f", "b", "r", "l", "f", "f", "r", "r", "f", "f", "f", "f", "f", "f", "f", "f"
 }
